modify login param to jsCode and implement http request to get openid by jsCode

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,5 +7,8 @@ spring:
     password: mysql
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
+#wx:
+#  appid:
+#  secret:
 server:
   port: 8888
