--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://rm-bp1c81zz11h13tm2gyo.mysql.rds.aliyuncs.com:3306/employment?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
-    username: user1
-    password: 20122002Liu
+    url: jdbc:mysql://localhost:3306/employment?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    username: yajialiu
+    password: 123456
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
 #wx:
